# PositionsMod

./: .gitignore  API_functions.cpp  API_functions.h  CConfig.cpp  CConfig.h  CMakeLists.txt  MyLogger.h  Positions.sln  Positions.vcxproj  Positions.vcxproj.filters  Py_config.cpp  Py_config.h  Py_main.cpp  SHA256.cpp  TRAJECTORY.lic  build_debug.bat  build_release.bat  build_relwithdebinfo.bat  build_x32_debug.bat  build_x32_release.bat  build_x32_relwithdebinfo.bat  build_x64_debug.bat  build_x64_release.bat  build_x64_relwithdebinfo.bat  index.html  twst_p.py
Debug_9_22/: pos.pyd
Release_9_22/: pos.pyd
TesterUI/: TesterUI.cpp  json2bin.py  make_db.py  make_positions.py  positions_04022020.json  positions_DB.json  positions_test.json  statistics.txt  stdafx.cpp  unxor_string.py  xor_string.py
TesterUI/input/: 01_karelia.json  02_malinovka.json  03_campania_big.json  04_himmelsdorf.json  05_prohorovka.json  06_ensk.json  07_lakeville.json  08_ruinberg.json  101_dday.json  10_hills.json  112_eiffel_tower_ctf.json  114_czech.json  115_sweden.json  11_murovanka.json  13_erlenberg.json  14_siegfried_line.json  17_munchen.json  18_cliff.json  19_monastery.json  212_epic_random_valley.json  217_er_alaska.json  (+18 more)
description/: ErrorCodes.txt  Structures.txt
src/: API_functions.cpp  API_functions.h  CConfig.cpp  CConfig.h  Common.cpp  Common.hpp  Keys.hpp  ModLight.cpp  ModLight.hpp  ModModel.cpp  ModModel.hpp  MyLogger.cpp  MyLogger.h  MyLogger.hpp  Positions.sln  Positions.vcxproj  Positions.vcxproj.filters  PyImports.hpp  PyModelsManager.cpp  PyModelsManager.hpp  PyModule.cpp  Py_config.h  Py_main.cpp  pch.h  py_pch.h
(+42 files in other folders)
